--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Javascript</title>
 </head>
 <body>
+    <h2>Javascript</h2>
 
-<h2>Javascript</h2>
-
-
-    
+    <script src="index.js"></script>
 </body>
 </html>
